--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -25,7 +25,7 @@
     {% endif %}
     {% endif %}
     {% endfor %}
-    <span class="sidebar-nav-item"><a href="https://github.com/cryptographica" rel="nofollow" target="_blank"
+    <span class="sidebar-nav-item"><a href="https://github.com/cryptographdev/" rel="nofollow" target="_blank"
         title="Cryptograph on Github">Github</a></span>
     <span class="sidebar-nav-item"><a href="https://twitter.com/cryptograph_ltd" rel="nofollow" target="_blank"
         title="Find Cryptograph Ltd on Twitter">Twitter</a></span>
