--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -31,6 +31,8 @@
         title="Find Cryptograph Ltd on Twitter">Twitter</a></span>
     <span class="sidebar-nav-item"><a href="https://anchor.fm/cryptograph" rel="nofollow" target="_blank"
         title="Cryptograph Podcast">Podcast</a></span>
+    <span class="sidebar-nav-item"><a href="https://cryptograph.nz" rel="nofollow" target="_blank"
+        title="Crypto-Investment Courses">Courses</a></span>
   </nav>
   <div class="sidebar-item">
     <p>
